Version 2.1.1 - 2012-01-26
* Point release

Version 2.1.0 - 2011-12-15
* Point release

Version 2.0.0 - 2011-11-14
* Major release

Version 1.9.0 - 2011-09-22
* Point release

Version 1.8.0 - 2011-08-24
* Major release

Version 1.7.1 - 2011-08-11
* Point release

Version 1.7.0 - 2011-01-27
* Point release

Version 1.6.0 - 2011-01-18
* Major release

Version 1.5.4 - 2011-01-03
* Point release

Version 1.5.3 - 2010-11-23
* Point release

Version 1.5.2 - 2010-11-18
* Point release

Version 1.5.1 - 2010-11-12
* Point release

Version 1.5.0 - 2010-10-08
* Point release

Version 1.4.0 - 2010-05-26
* Initial release
