@@ -5,7 +5,5 @@ include COPYRIGHT
 include CHANGELOG
 include LICENSE
 include *.xml
-include *.odt
 include locale/*.po
 include doc/*
-include icons/*
