@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton. The COPYRIGHT file at the top level of this
-  repository contains the full copyright notices and license terms. -->
+<!-- This file is part party_bank module for Tryton.
+The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data>
         <record model="ir.ui.view" id="bank_view_tree">
