@@ -1,11 +1,19 @@
 #!/usr/bin/env python
-# This file is part of Tryton.  The COPYRIGHT file at the top level of
-# this repository contains the full copyright notices and license terms.
+#This file is part party_bank module for Tryton.
+#The COPYRIGHT file at the top level of this repository contains 
+#the full copyright notices and license terms.
 
 from setuptools import setup
 import re
+import os
+import ConfigParser
 
-info = eval(open('__tryton__.py').read())
+config = ConfigParser.ConfigParser()
+config.readfp(open('tryton.cfg'))
+info = dict(config.items('tryton'))
+for key in ('depends', 'extras_depend', 'xml'):
+    if key in info:
+        info[key] = info[key].strip().splitlines()
 major_version, minor_version, _ = info.get('version', '0.0.1').split('.', 2)
 major_version = int(major_version)
 minor_version = int(minor_version)
@@ -21,12 +29,11 @@ requires.append('trytond >= %s.%s, < %s.%s' %
 
 setup(name='trytond_party_bank',
     version=info.get('version', '0.0.1'),
-    description=info.get('description', ''),
-    author=info.get('author', ''),
-    author_email=info.get('email', ''),
-    url=info.get('website', ''),
-    download_url="http://downloads.tryton.org/" + \
-            info.get('version', '0.0.1').rsplit('.', 1)[0] + '/',
+    description='Party Bank',
+    author='Virtual Things',
+    author_email='info@virtual-things.biz',
+    url='http://www.virtual-things.biz',
+    download_url='https://bitbucket.org/ukoma/party_bank',
     package_dir={'trytond.modules.party_bank': '.'},
     packages=[
         'trytond.modules.party_bank',
@@ -34,7 +41,7 @@ setup(name='trytond_party_bank',
     ],
     package_data={
         'trytond.modules.party_bank': info.get('xml', []) \
-                + info.get('translation', []),
+            + ['tryton.cfg', 'locale/*.po'],
     },
     classifiers=[
         'Development Status :: 5 - Production/Stable',
