@@ -1,0 +1,8 @@
+[tryton]
+version=2.6.0
+depends:
+    party
+    currency
+xml:
+    bank.xml
+    party.xml
