@@ -1,3 +1,6 @@
+* Active Record
+* Simplify module information with python configuration
+
 Version 2.1.1 - 2012-01-26
 * Point release
 
